[package]
name = "uselesskey-core-kid"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deterministic key-id helpers for uselesskey fixture crates."
categories = ["development-tools::testing"]
keywords = ["kid", "jwk", "fixtures", "testing", "deterministic"]
readme = "README.md"
homepage = "https://github.com/EffortlessMetrics/uselesskey"
documentation = "https://docs.rs/uselesskey-core-kid"
authors.workspace = true

[dependencies]
blake3.workspace = true
base64.workspace = true
