[package]
name = "uselesskey-core-negative-der"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "DER-focused negative fixture builders for deterministic corruption in uselesskey."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "negative", "der", "testing", "deterministic"]
homepage.workspace = true
authors.workspace = true

documentation = "https://docs.rs/uselesskey-core-negative-der"

[dependencies]
uselesskey-core-hash = { workspace = true }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core-hash/std"]

[package.metadata.docs.rs]
features = ["std"]
