[package]
name = "uselesskey-core-negative-pem"
version = "0.4.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "PEM-focused negative fixture corruption helpers for test fixtures."
categories.workspace = true
keywords = ["testing", "fixtures", "negative", "pem", "corruption"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-negative-pem"
authors.workspace = true

[dependencies]
uselesskey-core-hash = { workspace = true }

[dev-dependencies]
insta.workspace = true
uselesskey-core-hash = { workspace = true }
proptest = { workspace = true }
serde.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core-hash/std"]

[package.metadata.docs.rs]
features = ["std"]
