[package]
name = "uselesskey-core-negative"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Negative fixture builders for PEM/DER corruption used by uselesskey."
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["fixtures", "negative", "pem", "der", "testing"]
homepage = "https://github.com/EffortlessMetrics/uselesskey"
authors.workspace = true

documentation = "https://docs.rs/uselesskey-core-negative"

[dependencies]
uselesskey-core-id = { path = "../uselesskey-core-id", version = "0.3.0", default-features = false }

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core-id/std"]
