[package]
name = "uselesskey-core-negative"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Negative fixture builders for PEM/DER corruption used by uselesskey."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "negative", "pem", "der", "testing"]
homepage.workspace = true
authors.workspace = true

documentation = "https://docs.rs/uselesskey-core-negative"

[dependencies]
uselesskey-core-hash = { workspace = true }
uselesskey-core-negative-pem = { workspace = true }

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core-hash/std", "uselesskey-core-negative-pem/std"]

[package.metadata.docs.rs]
features = ["std"]
