[package]
name = "uselesskey-core-negative"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Compatibility facade for negative fixture builders used by uselesskey."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "negative", "pem", "der", "testing"]
homepage.workspace = true
authors.workspace = true

documentation = "https://docs.rs/uselesskey-core-negative"

[dependencies]
uselesskey-core-negative-der = { workspace = true }
uselesskey-core-negative-pem = { workspace = true }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core-negative-der/std", "uselesskey-core-negative-pem/std"]

[package.metadata.docs.rs]
features = ["std"]
